# Pascal-S-Compiler

./: .gitignore  CMakeLists.txt  ast.c  ast.h  codegen.c  codegen.h  def.h  gitignore.txt  lex.yy.c  main.c  output.c  parser.y  scanner.l  semantic.c  semantic.h  symtab.c  symtab.h  test.pas  test_array.c  test_array.pas  test_array2d.pas  test_array_error.pas  test_array_offset.pas  test_cascade.pas  test_const.pas  test_const_error.pas  test_for.pas  test_for_error.pas  test_func.c  test_func.pas  test_func_error.pas  test_if.pas  test_if_error.pas  test_params.pas  test_params_error.pas  test_proc.pas  test_proc_error.pas  test_program_head.c  test_program_head.pas  test_recovery.c  (+8 more)
